--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "i2c-bus": "^5.1.0",
     "vue": "^2.6.10",
     "vue-images-loaded": "^1.1.2",
     "vue-router": "^3.1.3"
