--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "i2c-bus": "^5.1.0",
+    "raspi": "^6.0.1",
+    "raspi-i2c": "^6.2.3",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
     "vue-images-loaded": "^1.1.2",
     "vue-router": "^3.1.3"
